--- a/.travis.yml
+++ b/.travis.yml
@@ -8,7 +8,7 @@ cache:
 script:
   - npm test
 before_deploy:
-  - npm global add travis-ci-cloudfront-invalidation
+  - npm global install travis-ci-cloudfront-invalidation
   - npm run build
 deploy:
   provider: s3
